Bug 327624 - When I delete a Contact in a DAV-Resource (Owncloud), the Conact will NOT be deleted in Kaddressbook
Summary: When I delete a Contact in a DAV-Resource (Owncloud), the Conact will NOT be ...
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: DAV Resource (other bugs)
Version First Reported In: 4.11
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-14 19:54 UTC by Eugen Albiker
Modified: 2014-09-04 21:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eugen Albiker 2013-11-14 19:54:23 UTC
Hi there,

I habe a Owncloud Server (5.0.13) and I added ther in Contact a new Contact. This Contact is the only one, and I have also only one addresbook in Owncloud.

The newly added Contact is corretly synced to my KDE Addressbook this a DAV-Resource.

When I delete the Contact in Owncloud then the contact will never be deleted in the KDE Adressbook.
Akonadi Console also shows 1 Contact in the DAV-Resource/Contact
- a restart of the DAV-Resouce does not help
- a restart of the Akonadi does not help

Deleting the DAV-Resource and recreate the DAV-Resource does help. Then there isn't anymore the deleted contact in Kadressbook.




Reproducible: Always

Steps to Reproduce:
1. Add a Contact in Owncloud
2. Sync with Akonadi/DAV Resource
3. Delete the Contact in Owncloud
Actual Results:  
The Contact is still in the DAV-Resouce Kadressbook

Expected Results:  
The Contact should be also deleted in the DAV-Resource in Kadressbook
Comment 1 Grégory Oestreicher 2014-09-04 21:30:47 UTC
Git commit fb165a5b1eed2b60d73aa9d2eae92d8dcf1e8d35 by Grégory Oestreicher.
Committed on 04/09/2014 at 21:28.
Pushed by goestreicher into branch 'KDE/4.14'.

Build an initial cache

This allows the resource to detect items deletion
while it was down.

M  +50   -6    resources/dav/resource/davgroupwareresource.cpp
M  +3    -0    resources/dav/resource/davgroupwareresource.h

http://commits.kde.org/kdepim-runtime/fb165a5b1eed2b60d73aa9d2eae92d8dcf1e8d35