Build an initial cache

This allows the resource to detect items deletion
while it was down.

BUG: 327624